[Minor] Code cleanup